fixed the layout so that the tab bar isn't covering the last entry

--- a/src/global.scss
+++ b/src/global.scss
@@ -41,3 +41,7 @@ ion-tab-bar {
   bottom: 0;
   width: 100%;
 }
+
+ion-router-outlet {
+  margin-bottom: 80px;
+}
